[workspace]
resolver = "2"
members = [
    "apps/cli",
    "apps/codegen",
    "apps/ensu/src-tauri",
    "bindings/ffi/crypto",
    "bindings/frb/ente-rust",
    "bindings/frb/photos",
    "bindings/uniffi/core",
    "bindings/uniffi/ensu/db",
    "bindings/uniffi/ensu/inference",
    "bindings/uniffi/ensu/transcription",
    "bindings/wasm/ente-wasm",
    "bindings/wasm/core",
    "crates/accounts",
    "crates/contacts",
    "crates/core",
    "crates/ensu/db",
    "crates/ensu/inference",
    "crates/ensu/transcription",
    "crates/image",
    "crates/photos",
    "crates/test-support",
    "e2e",
]

[workspace.dependencies]
ensu-db = { path = "crates/ensu/db" }
ensu-transcription = { path = "crates/ensu/transcription" }
ente-accounts = { path = "crates/accounts" }
ente-contacts = { path = "crates/contacts" }
ente-core = { path = "crates/core" }
ente-rs = { path = "apps/cli" }
ente-test-support = { path = "crates/test-support" }
ente_image = { path = "crates/image" }
ente_photos = { path = "crates/photos" }
inference_rs = { path = "crates/ensu/inference" }
wasm-bindgen = "0.2.125"
