[package]
name = "ente-accounts"
version = "0.0.1"
edition = "2024"

[dependencies]
ente-core = { path = "../core", features = ["srp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
futures-timer = "3"
uuid = { version = "1.11", features = ["js", "serde", "v4"] }
zeroize = { version = "1.8", features = ["derive"] }
log = "0.4"
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.6"
sha2 = "0.10"
srp = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
missing_docs = "warn"
