[package]
name = "ente-core"
version = "0.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "system-proxy", "json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Pure Rust Cryptography
xsalsa20poly1305 = "0.9"
chacha20 = "0.9"
poly1305 = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
salsa20 = "0.10"
argon2 = "0.5"
blake2b_simd = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
md-5 = "0.10"

# SRP authentication
srp = "0.6"
sha2 = "0.10"
getrandom = "0.2"

# Common dependencies
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# No features needed - pure Rust is always enabled

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# Require tests for public functions (enforced via CI/review)
# missing_panics_doc = "warn"
# missing_errors_doc = "warn"
