[package]
name = "ente-e2e"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
ente-rs = { path = "../cli" }
ente-accounts = { path = "../accounts" }
ente-contacts = { path = "../contacts" }
ente-core = { path = "../core", features = ["srp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
zeroize = { version = "1.8", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
hmac = "0.13"
serde = { version = "1", features = ["derive"] }
sha1 = "0.11"
