[package]
name = "ente-e2e"
edition = "2024"

[features]
museum = []

[[test]]
name = "full_e2e"
required-features = ["museum"]

[dependencies]
ente-accounts.workspace = true
ente-contacts.workspace = true
ente-core = { workspace = true, features = ["srp"] }
ente-rs.workspace = true
ente-test-support.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
zeroize = { version = "1.8", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
hmac = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
