[package]
name = "ente-validation"
version = "0.1.0"
edition = "2021"
publish = false
description = "Validates ente-core pure Rust crypto against libsodium reference"

[dependencies]
ente-core = { path = "../core" }
libsodium-sys-stable = "1.20"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
chacha20 = "0.9"
poly1305 = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
