[package]
name = "ensu-tauri"
version = "0.0.1"
description = "Ensu Desktop (Tauri)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "path-all", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ente-core = { path = "../../../rust/core", features = ["srp"] }
llmchat-db = { path = "../../../rust/llmchat-db" }
inference_rs = { path = "../../../rust/inference_rs" }
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
