[package]
name = "ente-contacts"
edition = "2024"

[dependencies]
ente-core = { workspace = true, features = ["srp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
md-5 = "0.11"
sha2 = "0.11"
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "1.6"
