[package]
name = "ente_heic"
version = "0.1.0"
edition = "2024"
description = "Pure Rust HEIF/HEIC/AVIF decoder with image crate integration hooks"
readme = "README.md"

[features]
default = []
image-integration = ["dep:image"]

[dependencies]
brotli = "8.0"
flate2 = "1.1"
heic = "=0.1.4"
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
libc = "0.2"
png = "0.18"
rav1d = { git = "https://github.com/laurens-pilot/rav1d.git", branch = "1.1.0_arm32_stable", default-features = false, features = [
    "bitdepth_8",
    "bitdepth_16",
] }
scuffle-h265 = "0.2.2"
