[package]
name = "ente_image"
edition = "2024"

[dependencies]
fast_image_resize = { version = "5.5.0", features = ["image"] }
image = { version = "0.25.5", default-features = true }
kamadak-exif = "0.6.1"
ente_heic = { package = "heic_decoder", git = "https://github.com/ente/heic-decoder.git", rev = "34f09f38ff25cb84d5fff14c8b9d3ff908b4c679", features = [
    "image-integration",
] }
thiserror = "2.0.11"
tiff = "0.10.3"
