[package]
name = "ente_photos"
version = "0.1.0"
edition = "2024"

[dependencies]
ente_image = { path = "../image" }
quick-xml = "0.37"
# The FRB photos bridge calls the SimSIMD symbol exported by usearch 2.21.x.
# Newer usearch releases switched that implementation to numkong symbols.
usearch = "=2.21.4"
fast_image_resize = { version = "5.5.0", features = ["image", "rayon"] }
image = { version = "0.25.5", default-features = true }
imageproc = "0.25.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
half = "2.1"
once_cell = "1.20.2"
regex = "1.11.1"
html-escape = "0.2.13"
plsfix = "0.1.8"
thiserror = "2.0.11"

# Photos stays on ORT rc.4 while Ensu transcription uses rc.12. Cargo cannot
# resolve both prereleases from crates.io in one workspace, so Photos pins rc.4
# from the upstream tag as a distinct source.
[target.'cfg(target_os = "ios")'.dependencies]
ort = { git = "https://github.com/pykeio/ort.git", tag = "v2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    "half",
    # Temporarily disabled to avoid iOS duplicate ObjC class collisions
    # when both Dart ONNXRuntime and Rust ONNXRuntime are linked.
    # Re-enable once we move to a single shared ORT runtime.
    # "coreml",
    "xnnpack",
] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
ort = { git = "https://github.com/pykeio/ort.git", tag = "v2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    "half",
    "load-dynamic",
    "copy-dylibs",
    "coreml",
    "nnapi",
    "xnnpack",
] }

[dev-dependencies]
tempfile = "3.12"
