[package]
name = "ente-test-support"
edition = "2024"
description = "Runs a local Museum backed by a temporary Postgres for integration tests"
publish = false

[dependencies]
postgresql_embedded = { version = "0.20", default-features = false, features = ["blocking", "rustls", "theseus"] }
uuid = { version = "1.11", features = ["v4"] }
