[package]
name = "inference_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "inference_rs"
crate-type = ["rlib"]

[dependencies]
llama-cpp-sys-2 = { version = "=0.1.131", features = ["mtmd"] }
parking_lot = "0.12"
self_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.131", default-features = false, features = ["mtmd"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "=0.1.131", features = ["mtmd"] }
