[package]
name = "inference_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "inference_rs"
crate-type = ["rlib"]

[dependencies]
parking_lot = "0.12"
self_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# llama-cpp-2's default features are "openmp" and "android-shared-stdcxx".
#
# - "openmp" enables OpenMP CPU parallelism. It requires libomp, which usually
#   ships with Linux/Windows toolchains but not Apple's clang. Without it,
#   llama.cpp falls back to its built-in thread pool.
#
# - "android-shared-stdcxx" is a no-op everywhere except Android (where it
#   enables the NDK's shared C++ runtime).
#
# On Apple platforms, Accelerate is auto-linked by llama-cpp-sys-2 for CPU
# SIMD helpers. llama-cpp-2 additionally enables the "metal" feature on arm64,
# which causes Metal to be used for GPU inference.
#
# "mtmd" is used on all platforms for enabling multimodal support.
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.144", default-features = false, features = ["mtmd"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "=0.1.144", features = ["mtmd"] }
