[package]
name = "ensu-transcription"
version = "0.1.0"
edition = "2024"

[lib]
name = "ensu_transcription"
crate-type = ["rlib"]

[dependencies]
flate2 = "1"
log = "0.4"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "http2", "charset", "system-proxy", "rustls-tls-webpki-roots"] }
rubato = "0.16"
tar = "0.4"
thiserror = "2"
transcribe-rs = { version = "0.3.11", default-features = false, features = ["onnx", "vad-silero"] }

[target.'cfg(target_os = "android")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
