[package]
name = "llmchat-db"
version = "0.1.0"
edition = "2024"

[dependencies]
ente-core = { path = "../../core" }
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "rng-getrandom"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
