[package]
name = "llmchat-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
llmchat-db = { path = "../db" }
ente-core = { path = "../../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "http2", "charset", "system-proxy", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "rng-getrandom"] }
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
