[package]
name = "core_uniffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_uniffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
base64 = "0.22"
once_cell = "1.19"
thiserror = "1.0"
uniffi = "0.31.0"
ente-core = { path = "../../core", features = ["srp"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
