[package]
name = "ente-validation-wasm"
version = "0.1.0"
edition = "2024"
publish = false
description = "WASM bindings for ente-core benchmarks"

[lib]
crate-type = ["cdylib"]

[dependencies]
ente-core = { path = "../../core" }
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1"
wasm-bindgen = "0.2"

[lints.rust]
missing_docs = "warn"
