[package]
name = "ente_photos_rust"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
usearch = "2.21.3"
ente_media_inspector = { path = "../../../../rust/photos" }
fast_image_resize = { version = "5.5.0", features = ["image", "rayon"] }
image = { version = "0.25.5", default-features = true }
imageproc = "0.25.0"
kamadak-exif = "0.6.1"
libheic-rs = { git = "https://github.com/laurens-pilot/libheic-rs.git", tag = "v0.1.5", features = [
    "image-integration",
] }
nalgebra = "0.33.2"
ndarray = "0.16.1"
once_cell = "1.20.2"
thiserror = "2.0.11"

[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "=2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    # Temporarily disabled to avoid iOS duplicate ObjC class collisions
    # when both Dart ONNXRuntime and Rust ONNXRuntime are linked.
    # Re-enable once we move to a single shared ORT runtime.
    # "coreml",
    "xnnpack",
] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
ort = { version = "=2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    "load-dynamic",
    "copy-dylibs",
    "coreml",
    "nnapi",
    "xnnpack",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
default = []
