[package]
name = "ente_photos_rust"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
ente_media_inspector = { path = "../../../../rust/photos" }
ente_image = { path = "../../../../rust/crates/image" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
default = []

[profile.dev.package."*"]
opt-level = 2
