[package]
name = "ensu-tauri"
version = "0.1.15"
description = "Ensu Desktop (Tauri)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "dialog-save", "dialog-open", "path-all", "fs-all", "shell-open", "process-relaunch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ente-core = { path = "../../../core", features = ["srp"] }
ensu-db = { path = "../../../ensu/db" }
ensu-sync = { path = "../../../ensu/sync" }
inference_rs = { path = "../../../ensu/inference" }
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri/updater"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"

[profile.dev]
opt-level = 1
